--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "google-auth-library": "^10.4.0",
+    "ioredis": "^5.8.2",
     "mysql2": "^3.14.5",
     "oauth2": "^0.0.1"
   }
