기능 추가: 운동 로그 및 식사 로그 라우터 추가, 사용자별 로그 삭제 기능 구현 및 bcrypt 패키지 추가

--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/chaanuu/GP_4#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "google-auth-library": "^10.4.0",
     "helmet": "^8.1.0",
