--- a/server/package.json
+++ b/server/package.json
@@ -20,12 +20,11 @@
   "homepage": "https://github.com/chaanuu/GP_4#readme",
   "dependencies": {
     "bcrypt": "^6.0.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "google-auth-library": "^10.4.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
     "morgan": "^1.10.1",
-    "mysql2": "^3.14.5",
-    "oauth2": "^0.0.1"
+    "mysql2": "^3.14.5"
   }
 }
