--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.5"
   }
 }
