--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/chaanuu/GP_4#readme",
   "dependencies": {
+    "apple-signin-auth": "^2.0.0",
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "google-auth-library": "^10.4.0",
     "helmet": "^8.1.0",
@@ -27,5 +29,12 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "mysql2": "^3.14.5"
+  },
+  "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.5",
+    "typescript": "^5.9.3"
   }
 }
