--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "google-auth-library": "^10.4.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
