--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -48,7 +48,9 @@ dependencies:
   fl_chart: ^0.66.2
 
   # 소셜 로그인
-  google_sign_in: ^6.2.1
+  firebase_core: ^4.2.0
+  firebase_auth: ^6.1.2
+  google_sign_in: ^7.2.0
   sign_in_with_apple: ^6.1.0
 
   # 걸음 수 측정
@@ -61,7 +63,6 @@ dependencies:
   # SVG 이미지 사용 (소셜 로그인 버튼 등)
   flutter_svg: ^2.0.10+1
   flutter_dotenv: ^6.0.0
-
 
 
 dev_dependencies:
