--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-validator": "^7.3.0",
     "google-auth-library": "^10.4.0",
     "helmet": "^8.1.0",
     "http-terminator": "^3.2.0",
